Opened 15 years ago

Closed 15 years ago

#5101 closed bug (fixed)

Media server crashes at boot

Reported by: anevilyak Owned by: axeld
Priority: high Milestone: R1
Component: Kits/Media Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by anevilyak)

On hrev34609, media_server is quite reliably crashing at boot with the following backtrace:

debug_server: Thread 132 entered the debugger: Debugger call: `sb'
stack trace, current PC 0xffff0114  :
  (0x700b96ac)  0x5a6d2b  __assert_fail + 0x46
  (0x700b96cc)  0x5b0478  _ZN8BPrivate11processHeap4freeEPv + 0x5e
  (0x700b971c)  0x5b1e9a  free + 0x154
  (0x700b973c)  0x558233  _ZdlPv + 0x23
  (0x700b975c)  0x55828c  _ZdaPv + 0x1c
  (0x700b977c)  0x4a2b0e  _ZN19dormant_flavor_infoaSERK11flavor_info + 0xb8
  (0x700b98ac)  0x4a2ffd  _ZN19dormant_flavor_infoaSERKS_ + 0x35
  (0x700b995c)  0x4a3058  _ZN19dormant_flavor_infoC1ERKS_ + 0x38
  (0x700b998c)  0x2245cc  _ZSt22__uninitialized_move_aIP26dormant_add_on_flavor_infoS1_SaIS0_EET0_T_S4_S3_RT1_ + 0xc3
  (0x700b99bc)  0x224c57  _ZNSt6vectorI26dormant_add_on_flavor_infoSaIS0_EE13_M_insert_auxEN9__gnu_cxx17__normal_iteratorIPS0_S2_EERKS0_ + 0x44d
  (0x700b9b6c)  0x2204be  _ZN11NodeManager20AddDormantFlavorInfoERK19dormant_flavor_info + 0x282
  (0x700b9d1c)  0x211658  _ZN9ServerApp14_HandleMessageElPKvm + 0xaca
  (0x700bdf7c)  0x2121a6  _ZN9ServerApp14_ControlThreadEPv + 0x2e
  (0x700c1fbc)  0x5a1a0b  thread_entry + 0x2d

However, if I terminate it and then start it via the media preflet, it comes up just fine.

In case it matters, the only active hardware I have for the media server is an SBLive 5.1 powered via the emuxki driver.

Change History (3)

comment:1 by anevilyak, 15 years ago

Description: modified (diff)

comment:2 by axeld, 15 years ago

Status: newassigned

comment:3 by axeld, 15 years ago

Component: Servers/media_serverKits/Media Kit
Resolution: fixed
Status: assignedclosed

Fixed in hrev34610.

Note: See TracTickets for help on using tickets.