* The dormant_flavor_info copy constructor was broken, causing bug #5101. * Cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34610 a95241bf-73f2-0310-859d-f6bbb57e9c96